// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePage snapshot: error when getUser rejects 1`] = `
<div>
  <p
    class="sc-hKFymg OJXOx"
  >
    Сервер не отвечает
  </p>
</div>
`;

exports[`ProfilePage snapshot: error when getUser returns null 1`] = `
<div>
  <p
    class="sc-hKFymg OJXOx"
  >
    Не удалось загрузить данные профиля
  </p>
</div>
`;

exports[`ProfilePage snapshot: loaded state with all sections and pre-filled data 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="sc-bdnyFh ihmluq"
    >
      <div
        class="sc-gtsqUy fiZGJy"
      >
        <div
          class="ant-collapse ant-collapse-icon-placement-start ant-collapse-borderless css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-collapse-item ant-collapse-item-active"
          >
            <div
              aria-disabled="false"
              aria-expanded="true"
              class="ant-collapse-header"
              role="button"
              tabindex="0"
            >
              <div
                class="ant-collapse-expand-icon"
              >
                <span
                  aria-label="expanded"
                  class="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    style="transform: rotate(90deg);"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="ant-collapse-title"
              >
                Профиль
              </span>
            </div>
            <div
              class="ant-collapse-panel ant-collapse-panel-active"
            >
              <div
                class="ant-collapse-body"
              >
                <div>
                  <div
                    class="sc-eCAqax dsDUlS"
                  >
                    <label
                      class="sc-gKAaef ezzMKi"
                      for=":r0:"
                    >
                      <span
                        class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon css-var-root ant-avatar-css-var css-dev-only-do-not-override-1daqxe2"
                        style="width: 100%; height: 100%; font-size: 60px; pointer-events: none;"
                      >
                        <img
                          src="/avatars/avatar.png"
                        />
                      </span>
                      <div
                        class="sc-jSFipO ccAAWF"
                      >
                        <span>
                          сменить
                          <br />
                          аватар
                        </span>
                      </div>
                    </label>
                    <input
                      accept="image/*"
                      class="sc-iCoHzw ggvqiy"
                      id=":r0:"
                      type="file"
                    />
                  </div>
                  <form
                    class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 sc-fujznN jQyIbl"
                  >
                    <div
                      class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 0 0 180px;"
                        >
                          <label
                            class="ant-form-item-required"
                            for="first_name"
                            title="Имя"
                          >
                            Имя
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                                id="first_name"
                                placeholder="Имя"
                                type="text"
                                value="Иван"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 0 0 180px;"
                        >
                          <label
                            class="ant-form-item-required"
                            for="second_name"
                            title="Фамилия"
                          >
                            Фамилия
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                                id="second_name"
                                placeholder="Фамилия"
                                type="text"
                                value="Иванов"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 0 0 180px;"
                        >
                          <label
                            class=""
                            for="display_name"
                            title="Отображаемое имя"
                          >
                            Отображаемое имя
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                                id="display_name"
                                placeholder="Имя в чате"
                                type="text"
                                value="ivan"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 0 0 180px;"
                        >
                          <label
                            class="ant-form-item-required"
                            for="login"
                            title="Логин"
                          >
                            Логин
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                                id="login"
                                placeholder="Логин"
                                type="text"
                                value="ivanov"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 0 0 180px;"
                        >
                          <label
                            class="ant-form-item-required"
                            for="email"
                            title="Почта"
                          >
                            Почта
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                                id="email"
                                placeholder="email@example.com"
                                type="text"
                                value="ivan@example.com"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 0 0 180px;"
                        >
                          <label
                            class="ant-form-item-required"
                            for="phone"
                            title="Телефон"
                          >
                            Телефон
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                                id="phone"
                                placeholder="+7 (999) 999-99-99"
                                type="text"
                                value="+71234567890"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item sc-pNWRh hwkNrj css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
                      >
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
                          style="flex: 1 1 auto;"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-1daqxe2 css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
                                type="submit"
                              >
                                <span>
                                  Сохранить
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-collapse-item"
          >
            <div
              aria-disabled="false"
              aria-expanded="false"
              class="ant-collapse-header"
              role="button"
              tabindex="0"
            >
              <div
                class="ant-collapse-expand-icon"
              >
                <span
                  aria-label="collapsed"
                  class="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="ant-collapse-title"
              >
                Сменить пароль
              </span>
            </div>
          </div>
          <div
            class="ant-collapse-item"
          >
            <div
              aria-disabled="false"
              aria-expanded="false"
              class="ant-collapse-header"
              role="button"
              tabindex="0"
            >
              <div
                class="ant-collapse-expand-icon"
              >
                <span
                  aria-label="collapsed"
                  class="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="ant-collapse-title"
              >
                Моё местоположение
              </span>
            </div>
          </div>
          <div
            class="ant-collapse-item"
          >
            <div
              aria-disabled="false"
              aria-expanded="false"
              class="ant-collapse-header"
              role="button"
              tabindex="0"
            >
              <div
                class="ant-collapse-expand-icon"
              >
                <span
                  aria-label="collapsed"
                  class="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="ant-collapse-title"
              >
                Уведомления
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfilePage snapshot: loading state 1`] = `
<div>
  <p
    class="sc-dlniIP dAuSBu"
  >
    Загрузка…
  </p>
</div>
`;
